--- a/resources.html
+++ b/resources.html
@@ -190,7 +190,7 @@
           <div class="kicker">Start now • 2 minutes</div>
           <h3>Quick Start</h3>
           <p>ชุดเริ่มต้นแบบทำได้ทันที เพื่อให้ร่างกายและใจ “กลับมานิ่ง” อย่างปลอดภัย</p>
-          <a class="btn" href="<a class="btn" href="resources-reset.html">อ่าน</a>">ไปที่ Quick Start</a>
+          <a class="btn" href="resources-reset.html">อ่าน</a>">ไปที่ Quick Start</a>
         </div>
 
         <div class="card">
