--- a/resources.html
+++ b/resources.html
@@ -198,7 +198,7 @@
           <div class="kicker">Breath • Stillness</div>
           <h3>Library</h3>
           <p>คลังแนวทางฝึก (Breath & Stillness) แบบย่อ ชัด ใช้ได้ในชีวิตจริง</p>
-          <a class="btn" href="#library">ไปที่ Library</a>
+          <a class="btn" href="resources-stillness.html">ไปที่ Library</a>
         </div>
 
         <div class="card">
